# django-boilerplate

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  pylintrc  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run_pylint.yml  run_unit_tests.yml
config/compose/: docker-compose.yml
config/deployments/: example.env
config/docker/: Dockerfile
config/make/: base.mk  docker.mk  local.mk  tests.mk
src/: manage.py
src/app/: asgi.py  settings.py  wsgi.py
src/app/settings/: base.py  production.py
src/core/: apps.py  models.py
tests/unit/: test_dummy_test.py
