[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["Nogueira <pmsn.mig2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
